# f1-oracle

./: .gitignore  README.md  pyproject.toml
configs/: apis.yaml  paths.yaml  seasons.yaml
docs/: design.md  one-pager.md  roadmap.md  tutorial.md
src/f1_oracle/: cli.py
src/f1_oracle/canonical/: circuits.py  constructors.py  drivers.py  entries.py  results_qualifying.py  results_race.py  results_sprint.py  weekends.py
src/f1_oracle/common/: io.py
src/f1_oracle/dashboard/: app.py
src/f1_oracle/dashboard/static/: app.js  styles.css
src/f1_oracle/dashboard/templates/: index.html
src/f1_oracle/evaluate/: evaluate.py
src/f1_oracle/features/: baseline.py  build.py  post_practice.py  post_quali.py
src/f1_oracle/ingest/: ergast.py  ergast_calendar.py  ergast_circuits.py  ergast_client.py  ergast_constructors.py  ergast_drivers.py  ergast_results_qualifying.py  ergast_results_race.py  ergast_results_sprint.py  fastf1.py
src/f1_oracle/models/: quali_model.py  race_model.py  registry.py
src/f1_oracle/orchestrator/: train_as_of.py  update_and_retrain.py
src/f1_oracle/predict/: compare.py  explain.py  run_quali.py  run_race.py  store.py  utils.py
tests/: test_no_leakage.py  test_prediction_utils.py
